fix overlapping footer

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -13,7 +13,7 @@ div{
 
 .container{
   background-color: $secondaryColor;
-  min-height: 900px;
+  min-height: 1000px;
   position: relative;
   max-width: 100%;
 }
